fix responsiveness issue on tablets and desktop

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html {
 
 .page-container {
   max-width: 100%;
-  margin: 0 auto;
+  margin: auto 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,10 +49,6 @@ html::after {
   z-index: -1;
 }
 .title-container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; */
   display: block;
   font-size: 1.2rem;
   text-align: center;
@@ -184,7 +180,6 @@ input[type="email"],
 /* Tablets */
 @media only screen and (min-width: 490px) {
   .page-container {
-    height: 100vh;
     font-size: 1.5rem;
   }
   .title-container {
